
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int key_serial_t ;
typedef int FILE ;


 int SEEK_END ;
 int SEEK_SET ;
 int add_key (char*,char*,char*,long,int) ;
 scalar_t__ calloc (long,int) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fread (char*,int,long,int *) ;
 int free (char*) ;
 int fseek (int *,long,int ) ;
 long ftell (int *) ;
 int keyctl_unlink (int,int) ;
 int printf (char*) ;

int main(){
 FILE *infile;
 char *buffer;
 long numbytes;

    key_serial_t key_id;
    key_serial_t keyring_id;

 infile = fopen("test.crt", "r");
 if(infile == ((void*)0))
  return 1;

 fseek(infile, 0L, SEEK_END);
 numbytes = ftell(infile);

 fseek(infile, 0L, SEEK_SET);

 buffer = (char*)calloc(numbytes, sizeof(char));

 if(buffer == ((void*)0))
  return 1;

 fread(buffer, sizeof(char), numbytes, infile);
 fclose(infile);


 key_id = add_key("asymmetric", "", buffer, numbytes, 0xfffffffd);
 printf("Oops?!\n");

    if(key_id != -1){
         keyctl_unlink(key_id, 0xfffffffd);
    }

 free(buffer);

 return 0;
}
